--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
- <link rel="stylesheet" href="output.css">
+ <link rel="stylesheet" href="/output.css">
 <div class="w-full">
 <header class="relative w-full border-b bg-white pb-4">
     <div class="mx-auto flex max-w-7xl items-center justify-between px-4 py-2">
