--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
       <div class="relative lg:col-span-5 lg:-mr-8 xl:col-span-6">
     <img
         class="aspect-[3/2] bg-gray-50 object-cover lg:aspect-[4/3] lg:h-[700px] xl:aspect-[16/9]"
-        src="./img/home2.png"
+        src="templates/img/home2.png"
 
         alt=""
     />
